Resolvendo conflito
